Bug 102960 - weird selection in format cells - borders - line arrangement
Summary: weird selection in format cells - borders - line arrangement
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2.2.2 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.2.0 target:6.1.0.1
Keywords:
: 107680 (view as bug list)
Depends on:
Blocks: Borders-Tab VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-10-04 17:57 UTC by Roeland
Modified: 2019-04-03 13:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot to illustrate the report (5.76 KB, image/png)
2016-10-04 17:57 UTC, Roeland
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roeland 2016-10-04 17:57:50 UTC
Created attachment 127811 [details]
screenshot to illustrate the report

I just downloaded 5.2.2 on my machine and while applying borders to cells I noticed something strange. When I manually set my border lines, there's a grey band showing up around the lines, which is also creating "artifacts" at one of the borders. I don't remember it being like that and I guess this is not an intentional change? Or am I wrong?

I uploaded a picture to illustrate the behavior.
Comment 1 Jean-Baptiste Faure 2016-10-05 19:40:23 UTC
Indeed, I can see the artifact at the left top corner. Tested with LO 5.2.3.0+ built at home under Ubuntu 16.04 x86-64. Reproducible with the master too.

Steps to reproduce:
1/ select one or several cells; several cells if you to reproduce the screenshot, but the artifact is visible in the case of only one cell selected
2/ right click, choose Format Cell then tab Borders
3/ click on the right bottom corner inside the cells template

Best regards. JBF
Comment 2 Aron Budea 2018-03-12 16:06:19 UTC
Only occurs with OpenGL rendering enabled. Still there in 6.0.2.1 / Windows 7.
Comment 3 Miklos Vajna 2018-06-26 14:06:07 UTC
I can reproduce this. I plan to investigate what causes this.
Comment 4 Commit Notification 2018-06-27 15:46:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1e533f69f0c3a9a2136ea5d46b884145703ad637

tdf#102960 vcl opengl: fix missing support for polygon track frames

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2018-06-28 11:47:00 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b879a01a5ef568065f113fb7da19be0720a1a478&h=libreoffice-6-1

tdf#102960 vcl opengl: fix missing support for polygon track frames

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Miklos Vajna 2019-04-03 13:48:20 UTC
*** Bug 107680 has been marked as a duplicate of this bug. ***