tdf#102960 vcl opengl: fix missing support for polygon track frames

Which is used in e.g. the Calc cell border dialog. The approach is
similar to commit 60790935cc143de49b732e93b6fb923b7669530b (tdf#96657 -
vcl opengl: implement invert: Track Frame., 2016-01-09) but that one was
for rectangles, this one is for polygons.

(cherry picked from commit 1e533f69f0c3a9a2136ea5d46b884145703ad637)

Change-Id: Ib1feebab2d14f4450fee0afe96afcea906965fdb
Reviewed-on: https://gerrit.libreoffice.org/56580
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>